--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
-
+    .submit-btn {
+        color:#FFF;
+        background: rgba(0,0,0,0);
+        border-radius: 30px !important;
+        border: 1px solid #FFF;
+      }
 }
